--- a/Front/final-project/src/styles.scss
+++ b/Front/final-project/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap.scss";
+@import "~ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
+@import "~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
 @import "/src/assets/scss/variables";
 @import "/src/assets/scss/tools";
