--- a/Front/final-project/src/app/shared/containers/layout/header/header.component.scss
+++ b/Front/final-project/src/app/shared/containers/layout/header/header.component.scss
@@ -114,6 +114,7 @@ ul {
         opacity: 0;
         visibility: hidden;
         transition: 0.3s;
+        z-index: 999;
         ul {
           li {
             padding: 11px 0 11px 30px;
@@ -134,6 +135,7 @@ ul {
               visibility: hidden;
               transition: 0.3s;
               opacity: 0;
+              background-color: #fff;
               a {
                 font-size: 15px;
                 font-weight: 400;
@@ -327,6 +329,7 @@ ul {
 }
 .mobile-menu {
   visibility: hidden;
+  z-index: 999;
   height: 0;
   width: 100%;
   background: transparent;
@@ -334,8 +337,10 @@ ul {
   transition: ease 200ms;
   transform: scaleY(0);
   transform-origin: top;
+  position: relative;
   ul {
     padding: 15px 4px;
+    background: rgba(255, 255, 255, 0.96);
     // overflow: hidden;
     li {
       cursor: pointer;
@@ -390,9 +395,10 @@ ul {
       .sub-drop-menu {
         padding: 0;
         transition: 0.2s ease-out;
-        overflow: hidden;
-        visibility: hidden;
-        height: 0;
+        background-color: #f7f7f7;
+        // overflow: hidden;
+        // visibility: hidden;
+        // height: 0;
       }
       .sub-drop-menu.sub-drop-active {
         visibility: visible;
@@ -401,10 +407,10 @@ ul {
     .drop-menu {
       padding: 0;
       transition: 0.2s ease-out;
-      overflow: hidden;
-      visibility: hidden;
+      // overflow: hidden;
+      // visibility: hidden;
       background-color: #f7f7f7;
-      height: 0;
+      // height: 0;
     }
     .drop-menu.drop-active {
       visibility: visible;
@@ -414,6 +420,7 @@ ul {
 .mobile-active {
   visibility: visible;
   transform: scaleY(1);
+  // height: auto;
 }
 
 .menu-btn {
@@ -505,16 +512,6 @@ ul {
   display: none;
 }
 //responsive
-@media only screen and (min-width: 1400px) {
-  .container {
-    min-width: 1440px !important;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .container {
-    max-width: 1440px !important;
-  }
-}
 @media only screen and(max-width:1200px) {
   .content-menu-dropdown {
     left: -207px !important;
