new arrivals section created

--- a/Front/final-project/src/app/shared/components/single-product/single-product.component.scss
+++ b/Front/final-project/src/app/shared/components/single-product/single-product.component.scss
@@ -30,6 +30,8 @@
       max-width: 100%;
       transition: 0.5s;
       transform: scale(1);
+      width: auto;
+      display: inline-block;
     }
     .icons-area {
       margin: 0;
