--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -108,21 +108,7 @@
         </div>
     </div>
 </section>
-<section id="new-arrivals" class="mt-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <app-single-product></app-single-product>
-            </div>
-            <div class="col-lg-3">
-                <app-single-product></app-single-product>
-            </div>
-            <div class="col-lg-3">
-                <app-single-product></app-single-product>
-            </div>
-            <div class="col-lg-3">
-                <app-single-product></app-single-product>
-            </div>
-        </div>
-    </div>
+<app-new-arrivals-container></app-new-arrivals-container>
+<section id="deal-of-day">
+    <div class="container"></div>
 </section>
