--- a/Front/final-project/src/assets/scss/_tools.scss
+++ b/Front/final-project/src/assets/scss/_tools.scss
@@ -26,6 +26,12 @@ body {
   font-size: 14px !important;
   font-weight: 500 !important;
 }
+.main-title {
+  font-size: 30px;
+  font-weight: 700;
+  color: #090b17;
+  margin-bottom: 0;
+}
 
 //responsive
 @media only screen and (min-width: 1400px) {
