--- a/Front/final-project/src/app/views/app/home/home.component.scss
+++ b/Front/final-project/src/app/views/app/home/home.component.scss
@@ -153,6 +153,43 @@
     }
   }
 }
+#deal-of-day {
+  padding: 25px 46px 47px;
+  .deal-product-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+    .deal-content {
+      padding: 30px;
+      margin-top: 30px;
+      margin-left: 10px;
+      padding-left: 100px;
+      h6 {
+        font-size: 14px;
+        font-weight: 600;
+        color: $color-pink-second;
+        text-transform: uppercase;
+      }
+      h1 {
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 1.21;
+        margin: 17px 0 38px 0;
+      }
+    }
+    .deal-product {
+      text-align: right;
+      a {
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+        text-decoration: none;
+      }
+    }
+  }
+}
 .price {
   margin-bottom: 35px;
   .old-price {
@@ -196,9 +233,34 @@
       font-size: 12px !important;
     }
   }
+  .deal-content {
+    padding-left: 30px !important;
+    h1 {
+      font-size: 45px !important;
+    }
+  }
   .price {
     span {
       font-size: 30px !important;
+    }
+  }
+}
+@media only screen and(max-width:1050px) {
+  .deal-content {
+    padding-right: 0 !important;
+  }
+}
+@media only screen and(max-width:992px) {
+  .deal-product {
+    a {
+      img {
+        max-height: 450px;
+      }
+    }
+  }
+  .deal-content {
+    h1 {
+      font-size: 34px !important;
     }
   }
 }
@@ -220,13 +282,52 @@
       }
     }
   }
+  .deal-content {
+    h1 {
+      font-size: 24px !important;
+    }
+  }
   .price {
     span {
       font-size: 28px !important;
     }
   }
 }
-@media only screen and (max-width: 557px) {
+@media only screen and(max-width:660px) {
+  .deal-content {
+    h6 {
+      font-size: 12px !important;
+    }
+    h1 {
+      font-size: 20px !important;
+    }
+    .price {
+      margin-bottom: 0 !important;
+      .old-price {
+        font-size: 14px !important;
+      }
+      .new-price {
+        font-size: 25px !important;
+        sup {
+          right: -27px !important;
+          top: 7px !important;
+          font-size: 14px !important;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 580px) {
+  .deal-product {
+    text-align: center !important;
+    a {
+      img {
+        max-height: 300px !important;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 568px) {
   .big-shop-collection {
     .collection-content {
       h1 {
@@ -240,6 +341,21 @@
   .price {
     span {
       font-size: 26px !important;
+    }
+  }
+  .deal-content {
+    padding: 0 !important;
+    h1 {
+      display: none !important;
+    }
+  }
+}
+@media only screen and (max-width: 400px) {
+  .deal-product {
+    a {
+      img {
+        max-width: 200px !important;
+      }
     }
   }
 }
