--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -141,3 +141,50 @@
         </div>
     </div>
 </section>
+<section id="featured-products" class="pb-5">
+    <app-products-slider-container [title]=" 'Featured Products' "></app-products-slider-container>
+</section>
+<section id="small-banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="small-banner-content" style="background-image: url(/assets/icons/full_banner.jpg);">
+                    <div class="small-banner-text">
+                        <h6 class="sub-title">Sofa Furniture</h6>
+                        <h4 class="big-title">Wooden Minimalistic Chairs for Home.</h4>
+                        <p>SALE UP TO <span>40%</span> OFF</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="offers">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-lg-3">
+                <app-offer [icon]="'/assets/icons/delevary.png'" [title]="'Free Delivery'"
+                    [text]=" 'Free Shipping on Order $500+' "></app-offer>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <app-offer [icon]="'/assets/icons/clock.png'" [title]="'90 DAYS RETURN'"
+                    [text]=" 'Change of mind is not applicable' "></app-offer>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <app-offer [icon]="'/assets/icons/payment.png'" [title]="'SECURE PAYMENT'"
+                    [text]=" 'World’s secure payment methods' "></app-offer>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <app-offer [icon]="'/assets/icons/help.png'" [title]="'24/7 HELP CENTER'"
+                    [text]=" 'Round-the-clock assistance Helpline' "></app-offer>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="Top Selling Products" class="pb-5">
+    <app-products-slider-container [title]="'Top Selling Products'"></app-products-slider-container>
+</section>
+<app-top-brands-container></app-top-brands-container>
+<section id="Blog">
+
+</section>
