blog section created

--- a/Front/final-project/src/app/views/app/home/home.component.scss
+++ b/Front/final-project/src/app/views/app/home/home.component.scss
@@ -225,6 +225,9 @@
 #offers {
   padding: 100px 0 65px 0;
 }
+#blog {
+  padding: 93px 0 67px 0;
+}
 .price {
   margin-bottom: 35px;
   .old-price {
