--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -181,10 +181,24 @@
         </div>
     </div>
 </section>
-<section id="Top Selling Products" class="pb-5">
+<section id="top-selling-roducts" class="pb-5">
     <app-products-slider-container [title]="'Top Selling Products'"></app-products-slider-container>
 </section>
 <app-top-brands-container></app-top-brands-container>
-<section id="Blog">
-
+<section id="blog">
+    <div class="container">
+        <h4 class="main-title">Form Our Blog</h4>
+        <div class="row">
+            <div class="col-lg-4">
+                <app-blog></app-blog>
+            </div>
+            <div class="col-lg-4">
+                <app-blog></app-blog>
+            </div>
+            <div class="col-lg-4">
+                <app-blog></app-blog>
+            </div>
+        </div>
+    </div>
 </section>
+<app-subscribe-banner></app-subscribe-banner>
