--- a/Front/final-project/src/app/shared/components/ads-banner/ads-banner.component.html
+++ b/Front/final-project/src/app/shared/components/ads-banner/ads-banner.component.html
@@ -1,1 +1,18 @@
-<p>ads-banner works!</p>
+<div id="ads">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-8">
+                <div class="big-banner-content">
+                    <h4>Best Wireless Speaker</h4>
+                    <p>For Perfect Home</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="small-banner-content">
+                    <h4>Apple MacBook Pro</h4>
+                    <p>A touch of Genius</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
