--- a/Front/final-project/src/app/shared/components/subscribe-banner/subscribe-banner.component.html
+++ b/Front/final-project/src/app/shared/components/subscribe-banner/subscribe-banner.component.html
@@ -1,18 +1,31 @@
 <section id="subscribe-banner">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-lg-6">
+        <div class="banner">
+            <div class="row align-items-center">
+                <div class="col-xl-7">
+                    <div class="banner-content">
                         <div class="title-area">
-                            <h4>New Deals</h4>
+                            <h4>
+                                <span> New Deals</span> <br>
+                                Start Daily at 12pm e.t.
+                            </h4>
+                        </div>
+                        <div class="text-area">
+                            <p>Get <span>FREE SHIPPING* & 5% REWARDS on</span> <br>
+                                every order with <span>InfixVuci Theme</span> rewards program</p>
                         </div>
                     </div>
-                    <div class="col-lg-6"></div>
                 </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="banner-subscribe"></div>
+                <div class="col-xl-5">
+                    <div class="banner-subscribe">
+                        <form action="#">
+                            <input onfocus="placeholder=this.placeholder='' "
+                                onblur="placeholder=this.placeholder= 'Type e-mail adress here' " class="subscribe"
+                                type="text" placeholder="Type e-mail adress here">
+                            <button class="btn btn-pink" type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
