--- a/Front/final-project/src/app/shared/containers/layout/footer/footer.component.html
+++ b/Front/final-project/src/app/shared/containers/layout/footer/footer.component.html
@@ -1,1 +1,108 @@
-<p>footer works!</p>
+<footer>
+    <app-ads-banner></app-ads-banner>
+    <div class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="logo-adress">
+                        <div class="logo">
+                            <a [routerLink]="['']">
+                                <img src="/assets/icons/logo.png" alt="">
+                            </a>
+                        </div>
+                        <p><span>Address:</span> No 40 Baria Sreet 133/2 <br> NewYork City, Newyork, United States.</p>
+                        <p></p>
+                        <p><span>Call Us:</span> (+084) 123.456.789</p>
+                        <p><span>Email:</span> contactinfo@InfixVuci.com</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer-links">
+                        <h4>QUICK MENU</h4>
+                        <ul>
+                            <li>
+                                <a href="#">TV & Video</a>
+                            </li>
+                            <li>
+                                <a href="#">Home Audio & Theatre</a>
+                            </li>
+                            <li>
+                                <a href="#">Camera, Photo & Video</a>
+                            </li>
+                            <li>
+                                <a href="#">Cell Phones & Accessories</a>
+                            </li>
+                            <li>
+                                <a href="#">Headphones</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer-links">
+                        <h4>INFOMATION</h4>
+                        <ul>
+                            <li>
+                                <a href="#">About Us </a>
+                            </li>
+                            <li>
+                                <a href="#">Brands</a>
+                            </li>
+                            <li>
+                                <a href="#">Gift Vouchers</a>
+                            </li>
+                            <li>
+                                <a href="#">Site Map</a>
+                            </li>
+                            <li>
+                                <a href="#">Accessories</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <div class="footer-links">
+                        <h4>MY ACCOUNT</h4>
+                        <ul>
+                            <li>
+                                <a href="#">My Account </a>
+                            </li>
+                            <li>
+                                <a href="#">Order History</a>
+                            </li>
+                            <li>
+                                <a href="#">Wish List</a>
+                            </li>
+                            <li>
+                                <a href="#">Order Details
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">Wishlist</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="container">
+            <div class="footer-border"></div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copyright-text">
+                        <p>© 2021 <a [routerLink]="['']">InfixVuci</a>. All rights reserved. Made By
+                            <a href="#">CodeThemes</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="payment-icons">
+                        <img src="/assets/icons/payment_img.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
