--- a/Front/final-project/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/Front/final-project/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -1,1 +1,19 @@
-<p>breadcrumb works!</p>
+<section id="breadcrumb">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="breadcrumb-area" style="background-image: url('/assets/icons/breadcrumb.jpg');">
+                    <div class="breadcrumb-content">
+                        <h4>New Arrivals</h4>
+                        <ul>
+                            <li><a [routerLink]="['']">Home</a></li>
+                            <li>
+                                <p> / NEW ARRIVALS</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
