--- a/Front/final-project/src/app/views/app/new-arrivals/new-arrivals.component.html
+++ b/Front/final-project/src/app/views/app/new-arrivals/new-arrivals.component.html
@@ -1,1 +1,14 @@
 <app-breadcrumb></app-breadcrumb>
+<section id="product-list" class="my-5 pt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-3 col-lg-4 col-md-12">
+                <app-filter></app-filter>
+            </div>
+            <div class="col-lg-8">
+                product-list
+            </div>
+        </div>
+    </div>
+</section>
+<app-subscribe-banner></app-subscribe-banner>
