--- a/Front/final-project/src/app/shared/components/single-product/single-product.component.scss
+++ b/Front/final-project/src/app/shared/components/single-product/single-product.component.scss
@@ -76,18 +76,8 @@
   .content {
     padding: 30px 0 63px 0;
     transition: 0.3s;
-    .star-area {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
+    .star {
       justify-content: center;
-      li {
-        margin-right: 5px;
-        fa-icon {
-          color: #ffc107;
-        }
-      }
     }
     p {
       color: #676e8b;
